--- a/MITBIH_save_to_csv.ipynb
+++ b/MITBIH_save_to_csv.ipynb
@@ -16,7 +16,7 @@
     {
      "data": {
       "text/plain": [
-       "\"\\nSave MITBIH dataset into numpy format\\nwill generate 3 files\\n1. metadata\\n2. samples ( contain 'n' channel => mostly only 2 channel )\\n3. annotation symbol\\n4. annotation sample\\n\""
+       "\"\\nSave MITBIH dataset into csv format\\nwill generate 4 files\\n1. metadata\\n2. samples ( contain 'n' channel => mostly only 2 channel )\\n3. annotation symbol\\n4. annotation sample\\n\""
       ]
      },
      "execution_count": 1,
@@ -26,7 +26,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Save MITBIH dataset into numpy format\n",
+    "Save MITBIH dataset into csv format\n",
     "will generate 4 files\n",
     "1. metadata\n",
     "2. samples ( contain 'n' channel => mostly only 2 channel )\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,24 +73,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#define save path\n",
-    "savePath = \"mitdb_numpy/\""
+    "savePath = \"mitdb_csv/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mitdb_numpy/ already created\n"
+      "create new folder mitdb_csv/\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -169,7 +169,7 @@
     "# load path data\n",
     "records = get_records()\n",
     "\n",
-    "for i,path in enumerate(records): \n",
+    "for i,path in enumerate(records[:]): \n",
     "    \n",
     "    ptn_id = path[-3:]\n",
     "    \n",
@@ -183,37 +183,47 @@
     "    \n",
     "    record = wf.rdsamp(path)\n",
     "    annotation = wf.rdann(path, 'atr')\n",
-    "    \n",
+    "   # cat = np.array(annotation.symbol)\n",
     "    \n",
     "#     print(np.transpose(record[0])) # samples\n",
-    "#     print(record[1]) # metadata\n",
+    "    header = list()\n",
+    "    val_csv = list()\n",
+    "    for key, value in record[1].items() :\n",
+    "        if type(value) is list:\n",
+    "            for i,val in enumerate(value):\n",
+    "                #print(key+\"_\"+str(i)+\": \"+val)\n",
+    "                header.append(key+\"_\"+str(i))\n",
+    "                val_csv.append(val)\n",
+    "#         else:\n",
+    "#             print (key+\": \"+str(value))\n",
+    "\n",
+    "#     print(len(record[1]['comments'])) # metadata\n",
     "#     print(annotation.sample[:10]) # [  18   77  370  662  946 1231 1515 1809 2044 2402]\n",
     "#     print(annotation.symbol[:10]) # ['+', 'N', 'N', 'N', 'N', 'N', 'N', 'N', 'A', 'N']\n",
-    "    \n",
-    "    np.save(savePath+str(ptn_id)+\"_samples.npy\",np.transpose(record[0]))\n",
-    "    np.save(savePath+str(ptn_id)+\"_metadata.npy\",record[1])\n",
-    "    np.save(savePath+str(ptn_id)+\"_ann_sample.npy\",annotation.sample)\n",
-    "    np.save(savePath+str(ptn_id)+\"_ann_symbol.npy\",annotation.symbol)\n",
+    "\n",
+    "\n",
+    "    np.savetxt(savePath+str(ptn_id)+\"_samples.csv\", record[0], delimiter=',')\n",
+    "    np.savetxt(savePath+str(ptn_id)+\"_metadata.csv\", [p for p in zip(header, val_csv)], delimiter=',',fmt='%s')\n",
+    "    np.savetxt(savePath+str(ptn_id)+\"_ann_sample.csv\", annotation.sample, delimiter=',')\n",
+    "    np.savetxt(savePath+str(ptn_id)+\"_ann_symbol.csv\", annotation.symbol, delimiter=',',fmt='%s')\n",
     "    print(str(ptn_id)+\" saved\")\n",
-    "    \n"
+    "    \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['+' 'N' 'N' 'N' 'N' 'N' 'N' 'N' 'A' 'N']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.load(savePath+\"100_ann_symbol.npy\")[:10])"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
